[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/target.png" type="Texture" id=1]
[ext_resource path="res://scripts/TargetBody.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 100 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 96, 32 )

[node name="TargetBody" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="TargetCollisionShape" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="LeftArea2D" type="Area2D" parent="."]

[node name="LeftCollisionShape" type="CollisionShape2D" parent="LeftArea2D"]
position = Vector2( -152, 0 )
shape = SubResource( 2 )

[node name="RightArea2D" type="Area2D" parent="."]

[node name="RightCollisionShape" type="CollisionShape2D" parent="RightArea2D"]
position = Vector2( 152, 0 )
shape = SubResource( 2 )

[connection signal="area_entered" from="Area2D" to="." method="_on_area_entered_in_target"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_exited_from_target"]
[connection signal="area_entered" from="LeftArea2D" to="." method="_on_area_entered_in_left_target"]
[connection signal="area_exited" from="LeftArea2D" to="." method="_on_area_exited_from_left_target"]
[connection signal="area_entered" from="RightArea2D" to="." method="_on_area_entered_in_right_target"]
[connection signal="area_exited" from="RightArea2D" to="." method="_on_area_exited_from_right_target"]
